--- a/package.json
+++ b/package.json
@@ -23,6 +23,6 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "vite": "^5.4.1"
   },
-  **"keywords": ["react", "todo", "frontend", "vite"],**
-  **"description": "Production-ready Todo app built with React + Vite"**
+  "keywords": ["react", "todo", "frontend", "vite"],
+  "description": "Production-ready Todo app built with React + Vite"
 }
